--- a/index.html
+++ b/index.html
@@ -45,7 +45,16 @@
          <div >
         <img id="img" src="chocolate pizza/choco-pizza.png" alt="chocolate pizza">
         </div>
-
+     <article>
+         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Incidunt dolore animi molestias! Explicabo ea, a molestiae ut quibusdam sit reiciendis natus pariatur qui, quae excepturi dolorem rerum quaerat? Laborum, unde.</p>
+         <br>
+         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet praesentium, quae est dolorem aperiam, perferendis repellendus reiciendis dignissimos tempore pariatur eum perspiciatis ex harum molestiae ipsam quia officiis, nemo sapiente.</p>
+         <br>
+         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsum sunt laboriosam delectus eum veniam obcaecati quidem rerum nobis sapiente ab blanditiis maiores, sit vero, officiis fugit dolore alias. Atque, necessitatibus.</p>
+     </article>
+     <div class='list'>
+         <img id="im2" src="chocolate pizza/list-bg.png" alt="list pic">
+     </div>
     </main>
     <footer></footer>
     
